src/app/RootLayoutClient.module.scss
.wrapper {
  width: 100%;
  align-self: stretch;
}

.content {
  height: 100%;
  position: relative;
  align-self: stretch;
  padding-top: 36px;
  padding-bottom: 36px;
  transition:
    margin-left 0.16s ease,
    padding-left 0.16s ease;

  &--withSidebar {
    min-height: 100%;
    height: 100%;
    margin-left: 160px;
    padding-left: 24px;
  }

  &--withoutSidebar {
    margin: 0 auto;
    padding-left: 0;
    max-width: 972px;
  }
}

